Resolved the issue of scrollbars. Fix footer, previously adding space below th ebody viewport, which was causing the overflow of the body, which then caused the scrollbars.

--- a/src/components/homepage/Hero.module.scss
+++ b/src/components/homepage/Hero.module.scss
@@ -1,10 +1,13 @@
 // src\components\homepage\Hero.module.scss
 @import "../../css/mixins.scss";
 
-body,html {
+body, html {
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden; // Prevent horizontal scroll
 }
+
 
 /* Styles for the home page only */
 .homepage {
@@ -41,7 +44,7 @@ body,html {
 .title {
   font-size: 6rem;
   text-shadow: 3px 0px 30px rgba(0, 0, 0, 0.2);
-  padding: 7rem 2rem 0rem 2rem;
+  padding: 5rem 2rem 0rem 2rem;
   
   @include small-size {
     font-size: 2rem;
@@ -52,7 +55,7 @@ body,html {
 .subtitle {
   font-size: 2rem;
   margin: 0;
-  padding: 0rem 2rem 9rem 2rem;
+  padding: 0rem 2rem 11rem 2rem;
   
   @include small-size {
     font-size: 1.5rem;
