--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5 {
   --ifm-color-primary-lighter: #31d8c4;
   --ifm-color-primary-lightest: #4eddcd;
   --docusaurus-highlighted-code-line-bg: #4eddcd;
-  --ifm-footer-background-color: #000;
+  --ifm-footer-background-color: #1b1b1d;
 }
 
 html[data-theme="dark"] {
@@ -61,9 +61,10 @@ html[data-theme="dark"] {
 
 /* Close navbar button */
 .navbar-sidebar__close {
-  margin-top: 0;
   align-items: end;
   width: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
 }
@@ -83,9 +84,15 @@ html[data-theme="dark"] {
   opacity: 0.6;
 }
 
+ 
 /* Footer styling */
-footer.footer {
+.footer {
   text-align: center;
+  position: absolute;  // Ensure it stays at the bottom of the viewport
+  bottom: 0;
+  width: 100%;
+  background: var(--ifm-footer-background-color);
+  padding: var(--ifm-footer-padding-vertical);
  }
 
 .button--outline {
